--- a/style.css
+++ b/style.css
@@ -22,3 +22,19 @@ body{
   background-color: #444;
   border-radius: 1vmin;
 }
+.tile{
+  position: absolute;
+  top: calc(0 * (20vmin + 2vmin));
+  left: calc(0 * (20vmin + 2vmin));;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20vmin;
+  height: 20vmin;
+  border-radius: 1vmin;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 7.5vmin;
+  font-weight: bold;
+  background-color: #fff;
+  color: #000;
+}
